       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain
    4. Only table cells and explicit paragraphs are recognized as text blocks


Revision History:
5-Oct-2004:
    Acknowledgements:
        Thanks to Hanson Char for identifying a JDK 1.5 incompatibility.

    Problems fixed:
        1. Renamed local variables which conflicted with new JDK 1.5 keyword "enum."
        2. bug #1040508 Using the setCheckbox and toggleCheckbox methods was not triggering the onclick event

4-Oct-2004
    Problems fixed:
        1. bug #1039989 Did not compile with JDK 1.3
        2. bug #1035949 Following a link from the top frame to a _parent target no longer results in a NullPointerException.

3-Oct-2004 1.6
Acknowledgements:
    Thanks to Chris Hane for making it easier to add support for javascript properties and for providing support for
        getAttribute() to handle any property defined in the underlying Node.
    Thanks to Patrick Lightbody for adding JavaScript support for the Style object
    Thanks to Phil Zampino for finding a fixing a problem in PseudoServer's handling of very long requests.
    Thanks to Andrew Bickerton for adding the following JavaScript support:
        Form.length          - returns the number of controls in a form
        Control.type         - returns a test description of the control type
        Control.defaultValue - returns the default value for text controls
        Initial page tokenizing now skips JavaScript while looking for header tags
        Writing into an empty frame no longer corrupts all empty frames
    Thanks to Jarom Smith for finding some typos in the tutorial.
    Thanks to Jay Dunning for providing an implementation of HttpServletResponse.containsHeader
        and implementing support for ServletContextListeners.