@@ -139,6 +139,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <h4>properties</h4>
 <ul>
 <li>src - read/write - the relative URL of the image</li>
+<li>name - read-only - the name attribute of the image</li>
 </ul>
 
 <h2>Link (inherits from HTMLElement)</h2>
